--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
                     <div class="col-6 col-sm-4 col-style">.col-6 .col-sm-4</div>
                     <div class="col-6 col-sm-4 col-style">.col-6 .col-sm-4</div>
                 </div>
+                <button type="button" class="btn btn-primary mb-3">Primary</button>
             </div>
-
         </div>
+        
 
     </div>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
