--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-            <button type="button" class="btn btn-primary mb-3">Primary</button>
+            <button type="button" class="btn btn-primary mb-3 mt-4">Primary</button>
             <div class="header">
-                <h1 class="mb-3 mt-4">Bootstrap grid examples</h1>
+                <h1 class="mb-3 ">Bootstrap grid examples</h1>
                 <h3 class="mb-3">Basic grid layouts to get you familiar with building within the Bootstrap grid system.</h3>
                 <p class="mb-3">In these examples the <span style= "color: #e83e8c;">.themed-grid-col</span> class is added to the columns to add some theming. This is not a class that is available in Bootstrap by default.</p>
             </div>
